--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.wordpress linguist-detectable=true
+*.php linguist-detectable=true
 *.css linguist-detectable=false
 *.javascript linguist-detectable=false
